Correcting spacing on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -17,12 +17,12 @@ input, select, textarea {
 
 header {
   width: 100%;
-  margin: 3em 0;
+  margin: 1em 0;
   text-align: center;
 }
 
 header img {
-  width: 80%;
+  width: 90%;
 }
 
 section {
@@ -49,7 +49,6 @@ h2 {
   color: #3cb878;
   font-size: .75em;
   font-family: 'Open Sans', sans-serif;
-  letter-spacing: .05em;
   margin: 3em 0 1em 0;
 }
 
@@ -101,7 +100,7 @@ input.button {
     /*background-color: yellow;*/
     margin: 0 auto;
   }
-
+  header {margin: 3em 0;}
   header img {width: 30em;}
   h1 {font-size: 2em;}
   p {font-size: 1em;}
